2015-10-26  Barton E. Schaefer  <schaefer@zsh.org>

	* 36968: Src/Modules/db_gdbm.c: use addmodulefd() to tell the
	shell about the descriptor of the dbm file

	* 36956: Src/mem.c: revert 34451, mmap() is too slow on MacOS

2015-10-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* users/20825: Src/Zle/zle_utils.c: get_undo_current_change()
	needs same protection as mkundoent() for execution within
	completion.

2015-10-25  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36962: Completion/Unix/Command/_git: _git: Fix completion of
	RHS of refspecs.

	* 36964: Completion/Unix/Command/_git: _git: Complete remotes
	branch names with slashes correctly.

	* 36960: Completion/Unix/Command/_git: _git: Enable slash matcher
	for more branch and tag completions, include 'git branch <TAB>'
	and 'git tag <TAB>'.

	* 36959: Completion/Unix/Command/_git: _git: Offer @~$n as
	completion of recent commits.

	* 36958: Completion/Unix/Command/_git: _git: Fix recent commit
	completion descriptions.

	* unposted: Completion/Unix/Command/_git: _git: Fix 'commit
	object name' completion messages.

2015-10-25  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 36911: Src/Zle/computil.c: '-optarg' should not match
	optspec '-opt='

2015-10-24  Barton E. Schaefer  <schaefer@zsh.org>

	* 36943 (with updated comment): Src/mem.c: restore scan for
	reclaimable blocks in freeheap() [had been removed by 36834]

2015-10-24  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Unix/Command/_beep: _beep completion:
	Actually hook it for the 'beep' command.

	* 36913 + 36945: Functions/VCS_Info/VCS_INFO_quilt: vcs_info quilt:
	Pass patch subject lines to gen-applied-string

	* 36912: Functions/VCS_Info/VCS_INFO_quilt: vcs_info quilt:
	Tolerate being in child of .pc's parent

2015-10-24  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Src/utils.c: small typo.

	* 36944: Src/utils.c, Src/Modules/tcp.c, Src/Modules/socket.c: